parser.output
Terminals unused in grammar

   PRINT_INT
   PRINT_STRING
   PRINT_FLOAT
   TOKEN_COL
   IO_VAR
   EOL


Stato 4 23 riduzione/riduzione
Stato 15 11 conflitti shift/riduzione
Stato 51 1 conflitti shift/riduzione
Stato 52 1 conflitti shift/riduzione


Grammatica

    0 $accept: root $end

    1 root: function

    2 function: function statements
    3         | %empty

    4 statements: statements statement
    5           | statement

    6 statement: expression
    7          | forStm
    8          | ifStm
    9          | scanStm
   10          | printStm

   11 expression: expression TOKEN_ADD term
   12           | expression TOKEN_SUB term
   13           | term
   14           | condition
   15           | init
   16           | NAME
   17           | assign

   18 term: term TOKEN_MUL factor
   19     | term TOKEN_DIV factor
   20     | factor

   21 factor: LB expression RB
   22       | INTEGER
   23       | FLOAT
   24       | NAME
   25       | NAME LSB NAME RSB
   26       | NAME LSB INTEGER RSB

   27 condition: expression GT expression
   28          | expression EQ expression
   29          | expression GE expression
   30          | expression LE expression
   31          | expression LT expression
   32          | expression NE expression

   33 forStm: FOR LB assign expression TOKEN_SEM forIncrement RB block

   34 assign: NAME TOKEN_ASS INTEGER TOKEN_SEM
   35       | NAME TOKEN_ASS FLOAT TOKEN_SEM
   36       | NAME TOKEN_ASS STRING_TOKEN TOKEN_SEM
   37       | NAME TOKEN_ASS castingFunc TOKEN_SEM
   38       | NAME TOKEN_ASS expression TOKEN_SEM

   39 init: INT_TOKEN NAME TOKEN_ASS expression TOKEN_SEM
   40     | INT_TOKEN NAME TOKEN_SEM
   41     | INT_TOKEN NAME LSB INTEGER RSB TOKEN_SEM
   42     | CHAR_TOKEN TOKEN_MUL NAME TOKEN_SEM
   43     | CHAR_TOKEN TOKEN_MUL NAME TOKEN_ASS STRING_TOKEN TOKEN_SEM
   44     | FLOAT_TOKEN NAME TOKEN_ASS FLOAT TOKEN_SEM
   45     | FLOAT_TOKEN NAME TOKEN_SEM

   46 forIncrement: NAME TOKEN_ADD TOKEN_ADD

   47 block: LCB statements RCB

   48 ifStm: IF LB condition RB block
   49      | IF LB condition RB block ELSE IF LB condition RB block
   50      | IF LB condition RB block ELSE block

   51 printStm: PRINT LB printStr outTail TOKEN_SEM

   52 printStr: STRING_TOKEN
   53         | TOKEN_QUO IO_INT TOKEN_QUO
   54         | TOKEN_QUO IO_STRING TOKEN_QUO
   55         | TOKEN_QUO IO_FLOAT TOKEN_QUO

   56 outTail: RB
   57        | TOKEN_COM NAME RB
   58        | TOKEN_COM NAME LSB NAME RSB RB
   59        | TOKEN_COM NAME LSB INTEGER RSB RB

   60 scanStm: SCAN LB TOKEN_QUO IO_INT TOKEN_QUO TOKEN_COM TOKEN_E NAME RB TOKEN_SEM
   61        | SCAN LB TOKEN_QUO IO_STRING TOKEN_QUO TOKEN_COM TOKEN_E NAME RB TOKEN_SEM
   62        | SCAN LB TOKEN_QUO IO_FLOAT TOKEN_QUO TOKEN_COM TOKEN_E NAME RB TOKEN_SEM
   63        | SCAN LB TOKEN_QUO IO_INT TOKEN_QUO TOKEN_COM TOKEN_E NAME LSB NAME RSB RB TOKEN_SEM

   64 castingFunc: LB INT_TOKEN RB NAME
   65            | LB FLOAT_TOKEN RB NAME


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256)
NAME (258) 16 24 25 26 34 35 36 37 38 39 40 41 42 43 44 45 46 57 58
    59 60 61 62 63 64 65
STRING_TOKEN (259) 36 43 52
INTEGER (260) 22 26 34 41 59
FLOAT (261) 23 35 44
LB (262) 21 33 48 49 50 51 60 61 62 63 64 65
RB (263) 21 33 48 49 50 56 57 58 59 60 61 62 63 64 65
LSB (264) 25 26 41 58 59 63
RSB (265) 25 26 41 58 59 63
LCB (266) 47
RCB (267) 47
PRINT (268) 51
SCAN (269) 60 61 62 63
PRINT_INT (270)
PRINT_STRING (271)
PRINT_FLOAT (272)
INT_TOKEN (273) 39 40 41 64
CHAR_TOKEN (274) 42 43
FLOAT_TOKEN (275) 44 45 65
TOKEN_COL (276)
TOKEN_COM (277) 57 58 59 60 61 62 63
TOKEN_SEM (278) 33 34 35 36 37 38 39 40 41 42 43 44 45 51 60 61 62
    63
TOKEN_QUO (279) 53 54 55 60 61 62 63
TOKEN_E (280) 60 61 62 63
IO_VAR (281)
EOL (282)
FOR (283) 33
IO_FLOAT (284) 55 62
IO_INT (285) 53 60 63
IO_STRING (286) 54 61
IF (287) 48 49 50
ELSE (288) 49 50
GT (289) 27
LT (290) 31
NE (291) 32
EQ (292) 28
GE (293) 29
LE (294) 30
TOKEN_ASS (295) 34 35 36 37 38 39 43 44
TOKEN_ADD (296) 11 46
TOKEN_SUB (297) 12
TOKEN_MUL (298) 18 42 43
TOKEN_DIV (299) 19


Simboli nonterminali e regole in cui appaiono

$accept (45)
    nel primo membro: 0
root (46)
    nel primo membro: 1, nel secondo membro: 0
function (47)
    nel primo membro: 2 3, nel secondo membro: 1 2
statements (48)
    nel primo membro: 4 5, nel secondo membro: 2 4 47
statement (49)
    nel primo membro: 6 7 8 9 10, nel secondo membro: 4 5
expression (50)
    nel primo membro: 11 12 13 14 15 16 17, nel secondo membro: 6 11
    12 21 27 28 29 30 31 32 33 38 39
term (51)
    nel primo membro: 18 19 20, nel secondo membro: 11 12 13 18 19
factor (52)
    nel primo membro: 21 22 23 24 25 26, nel secondo membro: 18 19
    20
condition (53)
    nel primo membro: 27 28 29 30 31 32, nel secondo membro: 14 48
    49 50
forStm (54)
    nel primo membro: 33, nel secondo membro: 7
assign (55)
    nel primo membro: 34 35 36 37 38, nel secondo membro: 17 33
init (56)
    nel primo membro: 39 40 41 42 43 44 45, nel secondo membro: 15
forIncrement (57)
    nel primo membro: 46, nel secondo membro: 33
block (58)
    nel primo membro: 47, nel secondo membro: 33 48 49 50
ifStm (59)
    nel primo membro: 48 49 50, nel secondo membro: 8
printStm (60)
    nel primo membro: 51, nel secondo membro: 10
printStr (61)
    nel primo membro: 52 53 54 55, nel secondo membro: 51
outTail (62)
    nel primo membro: 56 57 58 59, nel secondo membro: 51
scanStm (63)
    nel primo membro: 60 61 62 63, nel secondo membro: 9
castingFunc (64)
    nel primo membro: 64 65, nel secondo membro: 37


Stato 0

    0 $accept: . root $end

    $default  riduzione con la regola 3 (function)

    root      prosecuzione allo stato 1
    function  prosecuzione allo stato 2


Stato 1

    0 $accept: root . $end

    $end  shift e prosecuzione allo stato 3


Stato 2

    1 root: function .
    2 function: function . statements

    NAME         shift e prosecuzione allo stato 4
    INTEGER      shift e prosecuzione allo stato 5
    FLOAT        shift e prosecuzione allo stato 6
    LB           shift e prosecuzione allo stato 7
    PRINT        shift e prosecuzione allo stato 8
    SCAN         shift e prosecuzione allo stato 9
    INT_TOKEN    shift e prosecuzione allo stato 10
    CHAR_TOKEN   shift e prosecuzione allo stato 11
    FLOAT_TOKEN  shift e prosecuzione allo stato 12
    FOR          shift e prosecuzione allo stato 13
    IF           shift e prosecuzione allo stato 14

    $default  riduzione con la regola 1 (root)

    statements  prosecuzione allo stato 15
    statement   prosecuzione allo stato 16
    expression  prosecuzione allo stato 17
    term        prosecuzione allo stato 18
    factor      prosecuzione allo stato 19
    condition   prosecuzione allo stato 20
    forStm      prosecuzione allo stato 21
    assign      prosecuzione allo stato 22
    init        prosecuzione allo stato 23
    ifStm       prosecuzione allo stato 24
    printStm    prosecuzione allo stato 25
    scanStm     prosecuzione allo stato 26


Stato 3

    0 $accept: root $end .

    $default  accetta


Stato 4

   16 expression: NAME .
   24 factor: NAME .
   25       | NAME . LSB NAME RSB
   26       | NAME . LSB INTEGER RSB
   34 assign: NAME . TOKEN_ASS INTEGER TOKEN_SEM
   35       | NAME . TOKEN_ASS FLOAT TOKEN_SEM
   36       | NAME . TOKEN_ASS STRING_TOKEN TOKEN_SEM
   37       | NAME . TOKEN_ASS castingFunc TOKEN_SEM
   38       | NAME . TOKEN_ASS expression TOKEN_SEM

    LSB        shift e prosecuzione allo stato 27
    TOKEN_ASS  shift e prosecuzione allo stato 28

    $end         riduzione con la regola 16 (expression)
    $end         [riduzione con la regola 24 (factor)]
    NAME         riduzione con la regola 16 (expression)
    NAME         [riduzione con la regola 24 (factor)]
    INTEGER      riduzione con la regola 16 (expression)
    INTEGER      [riduzione con la regola 24 (factor)]
    FLOAT        riduzione con la regola 16 (expression)
    FLOAT        [riduzione con la regola 24 (factor)]
    LB           riduzione con la regola 16 (expression)
    LB           [riduzione con la regola 24 (factor)]
    RB           riduzione con la regola 16 (expression)
    RB           [riduzione con la regola 24 (factor)]
    RCB          riduzione con la regola 16 (expression)
    RCB          [riduzione con la regola 24 (factor)]
    PRINT        riduzione con la regola 16 (expression)
    PRINT        [riduzione con la regola 24 (factor)]
    SCAN         riduzione con la regola 16 (expression)
    SCAN         [riduzione con la regola 24 (factor)]
    INT_TOKEN    riduzione con la regola 16 (expression)
    INT_TOKEN    [riduzione con la regola 24 (factor)]
    CHAR_TOKEN   riduzione con la regola 16 (expression)
    CHAR_TOKEN   [riduzione con la regola 24 (factor)]
    FLOAT_TOKEN  riduzione con la regola 16 (expression)
    FLOAT_TOKEN  [riduzione con la regola 24 (factor)]
    TOKEN_SEM    riduzione con la regola 16 (expression)
    TOKEN_SEM    [riduzione con la regola 24 (factor)]
    FOR          riduzione con la regola 16 (expression)
    FOR          [riduzione con la regola 24 (factor)]
    IF           riduzione con la regola 16 (expression)
    IF           [riduzione con la regola 24 (factor)]
    GT           riduzione con la regola 16 (expression)
    GT           [riduzione con la regola 24 (factor)]
    LT           riduzione con la regola 16 (expression)
    LT           [riduzione con la regola 24 (factor)]
    NE           riduzione con la regola 16 (expression)
    NE           [riduzione con la regola 24 (factor)]
    EQ           riduzione con la regola 16 (expression)
    EQ           [riduzione con la regola 24 (factor)]
    GE           riduzione con la regola 16 (expression)
    GE           [riduzione con la regola 24 (factor)]
    LE           riduzione con la regola 16 (expression)
    LE           [riduzione con la regola 24 (factor)]
    TOKEN_ADD    riduzione con la regola 16 (expression)
    TOKEN_ADD    [riduzione con la regola 24 (factor)]
    TOKEN_SUB    riduzione con la regola 16 (expression)
    TOKEN_SUB    [riduzione con la regola 24 (factor)]
    TOKEN_MUL    riduzione con la regola 24 (factor)
    TOKEN_DIV    riduzione con la regola 24 (factor)
    $default     riduzione con la regola 16 (expression)


Stato 5

   22 factor: INTEGER .

    $default  riduzione con la regola 22 (factor)


Stato 6

   23 factor: FLOAT .

    $default  riduzione con la regola 23 (factor)


Stato 7

   21 factor: LB . expression RB

    NAME         shift e prosecuzione allo stato 4
    INTEGER      shift e prosecuzione allo stato 5
    FLOAT        shift e prosecuzione allo stato 6
    LB           shift e prosecuzione allo stato 7
    INT_TOKEN    shift e prosecuzione allo stato 10
    CHAR_TOKEN   shift e prosecuzione allo stato 11
    FLOAT_TOKEN  shift e prosecuzione allo stato 12

    expression  prosecuzione allo stato 29
    term        prosecuzione allo stato 18
    factor      prosecuzione allo stato 19
    condition   prosecuzione allo stato 20
    assign      prosecuzione allo stato 22
    init        prosecuzione allo stato 23


Stato 8

   51 printStm: PRINT . LB printStr outTail TOKEN_SEM

    LB  shift e prosecuzione allo stato 30


Stato 9

   60 scanStm: SCAN . LB TOKEN_QUO IO_INT TOKEN_QUO TOKEN_COM TOKEN_E NAME RB TOKEN_SEM
   61        | SCAN . LB TOKEN_QUO IO_STRING TOKEN_QUO TOKEN_COM TOKEN_E NAME RB TOKEN_SEM
   62        | SCAN . LB TOKEN_QUO IO_FLOAT TOKEN_QUO TOKEN_COM TOKEN_E NAME RB TOKEN_SEM
   63        | SCAN . LB TOKEN_QUO IO_INT TOKEN_QUO TOKEN_COM TOKEN_E NAME LSB NAME RSB RB TOKEN_SEM

    LB  shift e prosecuzione allo stato 31


Stato 10

   39 init: INT_TOKEN . NAME TOKEN_ASS expression TOKEN_SEM
   40     | INT_TOKEN . NAME TOKEN_SEM
   41     | INT_TOKEN . NAME LSB INTEGER RSB TOKEN_SEM

    NAME  shift e prosecuzione allo stato 32


Stato 11

   42 init: CHAR_TOKEN . TOKEN_MUL NAME TOKEN_SEM
   43     | CHAR_TOKEN . TOKEN_MUL NAME TOKEN_ASS STRING_TOKEN TOKEN_SEM

    TOKEN_MUL  shift e prosecuzione allo stato 33


Stato 12

   44 init: FLOAT_TOKEN . NAME TOKEN_ASS FLOAT TOKEN_SEM
   45     | FLOAT_TOKEN . NAME TOKEN_SEM

    NAME  shift e prosecuzione allo stato 34


Stato 13

   33 forStm: FOR . LB assign expression TOKEN_SEM forIncrement RB block

    LB  shift e prosecuzione allo stato 35


Stato 14

   48 ifStm: IF . LB condition RB block
   49      | IF . LB condition RB block ELSE IF LB condition RB block
   50      | IF . LB condition RB block ELSE block

    LB  shift e prosecuzione allo stato 36


Stato 15

    2 function: function statements .
    4 statements: statements . statement

    NAME         shift e prosecuzione allo stato 4
    INTEGER      shift e prosecuzione allo stato 5
    FLOAT        shift e prosecuzione allo stato 6
    LB           shift e prosecuzione allo stato 7
    PRINT        shift e prosecuzione allo stato 8
    SCAN         shift e prosecuzione allo stato 9
    INT_TOKEN    shift e prosecuzione allo stato 10
    CHAR_TOKEN   shift e prosecuzione allo stato 11
    FLOAT_TOKEN  shift e prosecuzione allo stato 12
    FOR          shift e prosecuzione allo stato 13
    IF           shift e prosecuzione allo stato 14

    NAME         [riduzione con la regola 2 (function)]
    INTEGER      [riduzione con la regola 2 (function)]
    FLOAT        [riduzione con la regola 2 (function)]
    LB           [riduzione con la regola 2 (function)]
    PRINT        [riduzione con la regola 2 (function)]
    SCAN         [riduzione con la regola 2 (function)]
    INT_TOKEN    [riduzione con la regola 2 (function)]
    CHAR_TOKEN   [riduzione con la regola 2 (function)]
    FLOAT_TOKEN  [riduzione con la regola 2 (function)]
    FOR          [riduzione con la regola 2 (function)]
    IF           [riduzione con la regola 2 (function)]
    $default     riduzione con la regola 2 (function)
